--- a/index.html
+++ b/index.html
@@ -10,31 +10,52 @@
             rel="stylesheet"
             href="styles.css"
         />
+        <link
+            rel="shortcut icon"
+            href="img/favicon.svg"
+            type="image/svg+xml"
+        />
         <title>Projeto de Gráficos</title>
     </head>
-    <body>
-        <header class="header">
+    <body id="body-tag">
+        <header
+            id="header-container"
+            class="header"
+        >
             <iframe
                 id="comp-header"
+                title="Header"
                 class="component_container"
                 src="comp/header.html"
             ></iframe>
         </header>
-        <main class="body">
-            <section class="colSize_1-2">
+        <main
+            id="body-container"
+            class="body"
+        >
+            <section
+                id="sheet-container"
+                class="colSize_1-2"
+            >
                 <iframe
                     id="comp-sheet"
+                    title="Sheet"
                     class="component_container"
                     src="comp/sheet.html"
                 ></iframe>
             </section>
-            <section class="colSize_1-2">
+            <section
+                id="charts-container"
+                class="colSize_1-2"
+            >
                 <iframe
                     id="comp-charts"
+                    title="Charts"
                     class="component_container"
                     src="comp/charts.html"
                 ></iframe>
             </section>
         </main>
+        <script src="indexController.js"></script>
     </body>
 </html>
